# MediaToolKit

./: CMakeLists.txt  LICENSE  README.md
resources/: app.aps  app.rc  resources.qrc
src/: AudioSettingsWidget.cpp  AudioSettingsWidget.h  BatchWorker.cpp  BatchWorker.h  CompressWidget.cpp  CompressWidget.h  ConvertWidget.cpp  ConvertWidget.h  FFmpegProcessor.cpp  FFmpegProcessor.h  FileItem.h  FileListWidget.cpp  FileListWidget.h  ImageSettingsWidget.cpp  ImageSettingsWidget.h  MainWindow.cpp  MainWindow.h  MediaTypes.h  PreviewWidget.cpp  PreviewWidget.h  SettingsDialog.cpp  SettingsDialog.h  VideoSettingsWidget.cpp  VideoSettingsWidget.h  main.cpp
